# Rubik-s-cube-resolver

./: #auto_saved_files#  CMakeLists.txt  CONTRIBUTING.md  Développement interface Software.docx  Gantt.xlsx  Makefile  Makefile.Release  README.md  TODO.md  TODO_perso.md  compile.txt  compile_analyse_v2.txt  makefile  makefile_decoupe.txt  object_script.test.Release  projet_rubix_cube.kicad_pcb  projet_rubix_cube.kicad_prl  projet_rubix_cube.kicad_pro  projet_rubix_cube.kicad_sch  rapport_d_avancement.md  rapport_install_petalinux.md  run.sh  structure.md  t.txt  test.txt  test_script.txt  test_script_2.txt  tree.txt  ~projet_rubix_cube.kicad_pcb.lck  ~projet_rubix_cube.kicad_sch.lck
C/: addr_0_test.c  (+3 more)
detection_resolution/code_zybo/: CMakeLists.txt  makefile  readme.txt  toolchain.cmake
detection_resolution/code_zybo/IA/Mask R-CNN/annotations/: annotations.xml
detection_resolution/code_zybo/IA/YOLO/: train.ipynb
detection_resolution/code_zybo/IA/YOLO/dataset/train/: labels.cache
detection_resolution/code_zybo/IA/YOLO/dataset/train/labels/: cube_face_10_jpg.rf.99acd39997469a796d154486a2ba5eed.txt  cube_face_13_jpg.rf.e7d3d3c25966ef0c9eb154b43fa7bc45.txt  cube_face_14_jpg.rf.8eff19e4206a331b36c86b7b555cb279.txt  cube_face_17_jpg.rf.3d52183bfc65a3410fbf2f5bd5a48066.txt  cube_face_25_jpg.rf.7133cf9ba47564ef84bf9d53795745cf.txt  cube_face_28_jpg.rf.5e4fbb75e69648791c7eeb1e61934c2f.txt  cube_face_2_jpg.rf.103a99e4e214ea000054093a8038d161.txt  cube_face_31_jpg.rf.f0fe7a448e15d26267068b772a1da423.txt  cube_face_3_jpg.rf.f2317c93dc1b42702c404dd43cfbe223.txt  cube_face_40_jpg.rf.0a3fc1fd8cc21615cfb82f16a77517aa.txt  cube_face_48_jpg.rf.7f2bef17a179404ca08f5612afdfc473.txt  cube_face_50_jpg.rf.2747a126bc5c21d57b2268870985d2ba.txt  (+10 more)
detection_resolution/code_zybo/IA/YOLO/runs/rubiks_faces_seg4/: args.yaml  events.out.tfevents.1744709692.L-RIT-O-SI0117.24404.1
detection_resolution/code_zybo/IA/YOLO/runs/rubiks_faces_seg7/: args.yaml  events.out.tfevents.1745500036.L-RIT-O-SI0117.13396.1
detection_resolution/code_zybo/IA/YOLO/runs/rubiks_faces_seg8/: events.out.tfevents.1745568624.L-RIT-O-SI0117.28188.0  results.csv
detection_resolution/code_zybo/data/aide_mémoire/: detect_test.txt
detection_resolution/code_zybo/data/groundtruth/: etat_cube.txt
detection_resolution/code_zybo/data/output/: kociemba.txt  kociemba_test.txt  output_encoded.txt
detection_resolution/code_zybo/include/: ColorDetector.hpp  check_structure.hpp  kociemba_solver.hpp  traduction.hpp  utils.hpp
detection_resolution/code_zybo/include/kociemba/: CubeParser.hpp
detection_resolution/code_zybo/src/: animate_solution_3d.py  config.cpp  kociemba_solver.cpp  main.cpp  utils.cpp
detection_resolution/code_zybo/src/kociemba/: Solver.cpp
detection_resolution/code_zybo/utils/: affichage_cube.py
(+1299 files in other folders)
